// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignupForm renders correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="modal-body"
  >
    <div
      className="form-group"
    >
      <label
        className="control-label"
        htmlFor="name"
      >
        Name
      </label>
      <input
        className="form-control"
        id="name"
        name="name"
        onChange={[Function]}
        type="text"
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className="control-label"
        htmlFor="email"
      >
        Email
      </label>
      <input
        className="form-control"
        id="email"
        name="email"
        onChange={[Function]}
        type="text"
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className="control-label"
        htmlFor="password"
      >
        Password
      </label>
      <input
        className="form-control"
        id="password"
        name="password"
        onChange={[Function]}
        type="password"
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className="control-label"
        htmlFor="passwordConfirmation"
      >
        Password Confirmation
      </label>
      <input
        className="form-control"
        id="passwordConfirmation"
        name="passwordConfirmation"
        onChange={[Function]}
        type="password"
      />
    </div>
    <div
      className="modal-footer"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        type="submit"
      >
        Submit
      </button>
    </div>
  </div>
</form>
`;

exports[`SignupForm when form fields are invalid renders form with validation errors 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="modal-body"
  >
    <div
      className="form-group has-success"
    >
      <label
        className="control-label"
        htmlFor="name"
      >
        Name
      </label>
      <input
        className="form-control"
        id="name"
        name="name"
        onChange={[Function]}
        type="text"
      />
    </div>
    <div
      className="form-group has-error"
    >
      <label
        className="control-label"
        htmlFor="email"
      >
        Email
      </label>
      <input
        className="form-control"
        id="email"
        name="email"
        onChange={[Function]}
        type="text"
      />
    </div>
    <div
      className="form-group has-error"
    >
      <label
        className="control-label"
        htmlFor="password"
      >
        Password
      </label>
      <input
        className="form-control"
        id="password"
        name="password"
        onChange={[Function]}
        type="password"
      />
    </div>
    <div
      className="form-group has-error"
    >
      <label
        className="control-label"
        htmlFor="passwordConfirmation"
      >
        Password Confirmation
      </label>
      <input
        className="form-control"
        id="passwordConfirmation"
        name="passwordConfirmation"
        onChange={[Function]}
        type="password"
      />
    </div>
    <div
      className="modal-footer"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        type="submit"
      >
        Submit
      </button>
    </div>
  </div>
</form>
`;
